--- a/index.css
+++ b/index.css
@@ -22,3 +22,12 @@
 	color: orange;
 	font-size: 30px;
 }
+
+.four{
+	margin: 50px;
+	margin-top: 50px;
+	padding: 20px;
+	display: inline-block;
+	color: orange;
+	font-size: 30px;
+}
